Cleanup NetBeans Upgrader module.
 - removed dead code which was tested but not accessible at runtime
 - removed CVS specific code
 - moved test data into test folder
 - code renovation, esp file-IO
 - fixed all compiler warnings